Added the create windows installer script.  Make the windows meta work

--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "cheerio": "^0.20.0",
     "commander": "^2.9.0",
     "electron-packager": "^7.0.1",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^2.5.2",
     "gitcloud": "^0.1.0",
     "hasbin": "^1.2.0",
-    "lodash": "^4.0.0",
+    "lodash": "^4.17.4",
     "loglevel": "^1.4.0",
     "ncp": "^2.0.0",
     "page-icon": "^0.3.0",
